--- a/My-SlideMenu/My-SlideMenu/Base.lproj/Main.storyboard
+++ b/My-SlideMenu/My-SlideMenu/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="QPt-Oo-f2e">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="QPt-Oo-f2e">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
@@ -151,6 +151,7 @@
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="titleLabel" destination="Wkm-bH-BjD" id="cVJ-F8-p1t"/>
+                                    <segue destination="8L7-h0-NYA" kind="unwind" unwindAction="unwindToNews:" id="UOD-8s-0KG"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -161,6 +162,7 @@
                     </tableView>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="r0d-2q-rdd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="8L7-h0-NYA" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
             <point key="canvasLocation" x="1841" y="479"/>
         </scene>
